Fix some spacing and add a default message

--- a/src/css/index.styl
+++ b/src/css/index.styl
@@ -102,13 +102,13 @@ header
 
 main
   position: relative
-  min-height: 90vh
+  min-height: calc(90vh - 1px)
   text-align: center
-  padding-top: 2.5vh
+  padding: 2.5vh 15px
   line-height: 1.5em
 
 footer
-  height: calc(5vh - 1px)
+  height: 5vh
   border-top: 1px solid $gray
 
 #menuSelect
